--- a/StaffManager.Desktop/MainWindow.xaml
+++ b/StaffManager.Desktop/MainWindow.xaml
@@ -5,7 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:viewModels="clr-namespace:StaffManager.Desktop.ViewModels"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Staff Manager"
+        Height="450"
+        Width="800">
 
     <Window.DataContext>
         <viewModels:MainViewModel />
@@ -71,6 +73,14 @@
             Grid.Column="1"
             Style="{StaticResource FilePickerButton}"
             Command="{Binding SelectTargetFolderCommand}" />
+
+        <Label 
+            Grid.Row="6" 
+            Grid.Column="0"
+            Content="v1.0.0"
+            Foreground="LightGray"
+            VerticalAlignment="Bottom"
+            HorizontalAlignment="Left" />
 
         <Button
             Grid.Row="6" 
